0.4.16/_sources/gallery/add_surface_2D.rst

.. DO NOT EDIT.
.. THIS FILE WAS AUTOMATICALLY GENERATED BY SPHINX-GALLERY.
.. TO MAKE CHANGES, EDIT THE SOURCE PYTHON FILE:
.. "gallery/add_surface_2D.py"
.. LINE NUMBERS ARE GIVEN BELOW.

.. only:: html

    .. note::
        :class: sphx-glr-download-link-note

        Click :ref:`here <sphx_glr_download_gallery_add_surface_2D.py>`
        to download the full example code

.. rst-class:: sphx-glr-example-title

.. _sphx_glr_gallery_add_surface_2D.py:


Add surface 2D
==============

Display a 2D surface

.. GENERATED FROM PYTHON SOURCE LINES 7-21



.. image-sg:: /gallery/images/sphx_glr_add_surface_2D_001.png
   :alt: add surface 2D
   :srcset: /gallery/images/sphx_glr_add_surface_2D_001.png
   :class: sphx-glr-single-img





.. code-block:: default


    import numpy as np
    import napari


    data = np.array([[0, 0], [0, 20], [10, 0], [10, 10]])
    faces = np.array([[0, 1, 2], [1, 2, 3]])
    values = np.linspace(0, 1, len(data))

    # add the surface
    viewer = napari.view_surface((data, faces, values))

    if __name__ == '__main__':
        napari.run()


.. _sphx_glr_download_gallery_add_surface_2D.py:


.. only :: html

 .. container:: sphx-glr-footer
    :class: sphx-glr-footer-example



  .. container:: sphx-glr-download sphx-glr-download-python

     :download:`Download Python source code: add_surface_2D.py <add_surface_2D.py>`



  .. container:: sphx-glr-download sphx-glr-download-jupyter

     :download:`Download Jupyter notebook: add_surface_2D.ipynb <add_surface_2D.ipynb>`


.. only:: html

 .. rst-class:: sphx-glr-signature

    `Gallery generated by Sphinx-Gallery <https://sphinx-gallery.github.io>`_
